[package]
name = "link-checker-rs"
version = "1.0.0"
authors = ["Imran Khan <imrankhan@teknik.io>"]
edition = "2018"

[dependencies]
reqwest = { version = "*", features = ["rustls-tls"] }
tokio = { version = "*", features = ["full"] }
anyhow = "*"
futures = "*"
clap = { git = "https://github.com/clap-rs/clap/" }
